--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 git .DS_Store
 node_modules
 /dist
+AWSKeys.txt
 
 
 # local env files
@@ -21,3 +22,23 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/logs
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+amplify/backend/.temp
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplifyconfiguration.dart
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
+.secret-*
