--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amplify": "^0.0.11",
+    "aws-amplify": "^4.1.2",
+    "aws-sdk": "^2.936.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.5",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
+    "mapbox-gl": "^1.0.0",
+    "maplibre-gl": "^1.14.1-rc.2",
     "print-js": "^1.6.0",
     "vue": "^3.0.0",
     "vue-html-to-paper": "^1.4.1",
