--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "amplify": "^0.0.11",
     "aws-amplify": "^4.2.5",
     "aws-sdk": "^2.981.0",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.5",
     "html2canvas": "^1.0.0-rc.7",
@@ -23,7 +24,8 @@
     "vue-html-to-paper": "^1.4.1",
     "vue-router": "^4.0.0-0",
     "vue3-apexcharts": "^1.4.0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
