--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@benchmark-urbanism/vue-mapbox-map": "^0.14.11",
     "amplify": "^0.0.11",
+    "apexcharts": "^3.30.0",
     "aws-amplify": "^4.2.5",
     "aws-sdk": "^2.981.0",
     "axios": "^0.21.1",
