--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-components": "^1.9.6",
+    "@aws-amplify/ui-vue": "^2.0.4",
     "@benchmark-urbanism/vue-mapbox-map": "^0.14.11",
     "amplify": "^0.0.11",
     "apexcharts": "^3.30.0",
-    "aws-amplify": "^4.2.5",
+    "aws-amplify": "^4.3.10",
+    "aws-amplify-vue": "^2.1.5",
     "aws-sdk": "^2.981.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
