Amplify Automated Changes

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -35,5 +35,12 @@
       "service": "amplifyhosting",
       "type": "cicd"
     }
+  },
+  "storage": {
+    "s3spindjappstorage": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
+    }
   }
 }
