Added Stripe Payment Functionalities To AdminEVNT

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@aws-amplify/ui-components": "^1.9.6",
     "@aws-amplify/ui-vue": "^2.0.4",
     "@benchmark-urbanism/vue-mapbox-map": "^0.14.11",
+    "@stripe/stripe-js": "^1.22.0",
+    "@vue-stripe/vue-stripe": "^4.2.9",
     "amplify": "^0.0.11",
     "apexcharts": "^3.30.0",
     "aws-amplify": "^4.3.10",
@@ -24,6 +26,7 @@
     "mapbox-gl": "^1.0.0",
     "maplibre-gl": "^1.15.2",
     "print-js": "^1.6.0",
+    "stripe": "^8.195.0",
     "vue": "^3.0.0",
     "vue-html-to-paper": "^1.4.1",
     "vue-router": "^4.0.0-0",
