--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ amplifytools.xcconfig
 .secret-*
 **.sample
 #amplify-do-not-edit-end
+amplify/README.md
+amplify/backend/types/amplify-dependent-resources-ref.d.ts
